syntax = "proto3";

option go_package = "color.faas/pkg/proto/scheduler";
package scheduler;

// The greeting service definition.
service Greeter {
  rpc RunTask (TaskInstance) returns (RunTaskReply) {}
}

message TaskInstance {
  string taskID = 1;
  string funcName = 2;
  string funcID = 8;
  string funcStorageType = 3; // s3
  string taskFuncPath = 4;
  string taskRunningMode = 5; //sync or async
  string funcType = 11; // Go or python ......

  int64 taskCPUCore = 6;
  int64 taskMem = 7;
  int64 taskDiskSpace = 9;
  int64 taskMaxTime = 10;

  string taskInput = 12;
}

message RunTaskReply {
  int64 status = 1;
  string msg = 2;
  string logs =3;
}